// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render as submit 1`] = `
<button
  className="a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ad ae af ag ah ai aj ak al am an ao"
  disabled={undefined}
  onClick={[Function]}
  type="submit"
>
  Button
</button>
`;

exports[`should render as submit 2`] = `
"
.a:hover {
  background-color: #2869a2
}

.b:hover {
  border-color: #215685
}

.c:hover {
  color: #fff
}

.d:active {
  background-color: #215685
}

.e:active {
  border-color: #1a4468
}

.f:active {
  color: #fff
}

.g:focus {
  background-color: #2f7bbf
}

.h:focus {
  color: #fff
}

.i:focus {
  border-color: #2869a2
}

.j[title] {
  pointer-events: none
}

.k {
  background-color: #2f7bbf
}

.l {
  border-bottom: 1px solid
}

.m {
  border-color: #2869a2
}

.n {
  border-left: 0px
}

.o {
  border-right: 0px
}

.p {
  border-top: 0px
}

.q {
  color: #fff
}

.r {
  cursor: pointer
}

.s {
  display: inline-block
}

.t {
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif
}

.u {
  font-size: 0.9333333333333333rem
}

.v {
  font-weight: 400
}

.w {
  line-height: 1.2
}

.x {
  margin-bottom: 0px
}

.y {
  margin-right: 0px
}

.z {
  margin-top: 0px
}

.ab {
  margin-left: 0px
}

.ac {
  opacity: inherit
}

.ad {
  padding-bottom: 0.53em
}

.ae {
  padding-left: 1em
}

.af {
  padding-right: 1em
}

.ag {
  padding-top: 0.6em
}

.ah {
  pointer-events: auto
}

.ai {
  position: relative
}

.aj {
  border-radius: 2px
}

.ak {
  text-align: center
}

.al {
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease
}

.am {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.an {
  float: none
}

.ao {
  max-width: initial
}
"
`;

exports[`should render with loading 1`] = `
<button
  className="a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ad ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az ba bb"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`should render with loading 2`] = `
"
@-webkit-keyframes k1 {
  50% {
    opacity: 0
  }
}

@-moz-keyframes k1 {
  50% {
    opacity: 0
  }
}

@keyframes k1 {
  50% {
    opacity: 0
  }
}

.a:hover {
  background-color: #ededed
}

.b:hover {
  border-color: #dbdbdb
}

.c:hover {
  color: #ededed
}

.d:active {
  background-color: #215685
}

.e:active {
  border-color: #dbdbdb
}

.f:active {
  color: #fff
}

.g:focus {
  color: #ededed
}

.h:focus {
  outline: none
}

.i:focus {
  border-color: #dbdbdb
}

.j::before {
  content: \\"…\\"
}

.k::before {
  color: black
}

.l::before {
  display: block
}

.m::before {
  position: absolute
}

.n::before {
  top: 0.6em
}

.o::before {
  left: 0px
}

.p::before {
  height: 100%
}

.q::before {
  width: 100%
}

.r::before {
  opacity: 1
}

.s::before {
  animation-name: k1
}

.t::before {
  animation-duration: 1s;
  -webkit-animation-duration: 1s
}

.u::before {
  animation-iteration-count: infinite;
  -webkit-animation-iteration-count: infinite
}

.v::before {
  animation-timing-function: linear;
  -webkit-animation-timing-function: linear
}

.w[title] {
  pointer-events: none
}

.x {
  background-color: #ededed
}

.y {
  border-bottom: 1px solid
}

.z {
  border-color: #dbdbdb
}

.ab {
  border-left: 0px
}

.ac {
  border-right: 0px
}

.ad {
  border-top: 0px
}

.ae {
  color: #ededed
}

.af {
  cursor: default
}

.ag {
  display: inline-block
}

.ah {
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif
}

.ai {
  font-size: 0.9333333333333333rem
}

.aj {
  font-weight: 400
}

.ak {
  line-height: 1.2
}

.al {
  margin-bottom: 0px
}

.am {
  margin-right: 0px
}

.an {
  margin-top: 0px
}

.ao {
  margin-left: 0px
}

.ap {
  opacity: 0.8
}

.aq {
  padding-bottom: 0.53em
}

.ar {
  padding-left: 1em
}

.as {
  padding-right: 1em
}

.at {
  padding-top: 0.6em
}

.au {
  pointer-events: auto
}

.av {
  position: relative
}

.aw {
  border-radius: 2px
}

.ax {
  text-align: center
}

.ay {
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease
}

.az {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.ba {
  float: none
}

.bb {
  max-width: initial
}
"
`;

exports[`should render with loading and disabled overridden 1`] = `
<button
  className="a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ad ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az ba bb"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`should render with loading and disabled overridden 2`] = `
"
@-webkit-keyframes k1 {
  50% {
    opacity: 0
  }
}

@-moz-keyframes k1 {
  50% {
    opacity: 0
  }
}

@keyframes k1 {
  50% {
    opacity: 0
  }
}

.a:hover {
  background-color: #ededed
}

.b:hover {
  border-color: #dbdbdb
}

.c:hover {
  color: #ededed
}

.d:active {
  background-color: #215685
}

.e:active {
  border-color: #dbdbdb
}

.f:active {
  color: #fff
}

.g:focus {
  color: #ededed
}

.h:focus {
  outline: none
}

.i:focus {
  border-color: #dbdbdb
}

.j::before {
  content: \\"…\\"
}

.k::before {
  color: black
}

.l::before {
  display: block
}

.m::before {
  position: absolute
}

.n::before {
  top: 0.6em
}

.o::before {
  left: 0px
}

.p::before {
  height: 100%
}

.q::before {
  width: 100%
}

.r::before {
  opacity: 1
}

.s::before {
  animation-name: k1
}

.t::before {
  animation-duration: 1s;
  -webkit-animation-duration: 1s
}

.u::before {
  animation-iteration-count: infinite;
  -webkit-animation-iteration-count: infinite
}

.v::before {
  animation-timing-function: linear;
  -webkit-animation-timing-function: linear
}

.w[title] {
  pointer-events: none
}

.x {
  background-color: #ededed
}

.y {
  border-bottom: 1px solid
}

.z {
  border-color: #dbdbdb
}

.ab {
  border-left: 0px
}

.ac {
  border-right: 0px
}

.ad {
  border-top: 0px
}

.ae {
  color: #ededed
}

.af {
  cursor: default
}

.ag {
  display: inline-block
}

.ah {
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif
}

.ai {
  font-size: 0.9333333333333333rem
}

.aj {
  font-weight: 400
}

.ak {
  line-height: 1.2
}

.al {
  margin-bottom: 0px
}

.am {
  margin-right: 0px
}

.an {
  margin-top: 0px
}

.ao {
  margin-left: 0px
}

.ap {
  opacity: 0.8
}

.aq {
  padding-bottom: 0.53em
}

.ar {
  padding-left: 1em
}

.as {
  padding-right: 1em
}

.at {
  padding-top: 0.6em
}

.au {
  pointer-events: auto
}

.av {
  position: relative
}

.aw {
  border-radius: 2px
}

.ax {
  text-align: center
}

.ay {
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease
}

.az {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.ba {
  float: none
}

.bb {
  max-width: initial
}
"
`;

exports[`should render with type 1`] = `
<button
  className="a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ad ae af ag ah ai aj ak al am an ao"
  disabled={undefined}
  onClick={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`should render with type 2`] = `
"
.a:hover {
  background-color: #2869a2
}

.b:hover {
  border-color: #215685
}

.c:hover {
  color: #fff
}

.d:active {
  background-color: #215685
}

.e:active {
  border-color: #1a4468
}

.f:active {
  color: #fff
}

.g:focus {
  background-color: #2f7bbf
}

.h:focus {
  color: #fff
}

.i:focus {
  border-color: #2869a2
}

.j[title] {
  pointer-events: none
}

.k {
  background-color: #2f7bbf
}

.l {
  border-bottom: 1px solid
}

.m {
  border-color: #2869a2
}

.n {
  border-left: 0px
}

.o {
  border-right: 0px
}

.p {
  border-top: 0px
}

.q {
  color: #fff
}

.r {
  cursor: pointer
}

.s {
  display: inline-block
}

.t {
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif
}

.u {
  font-size: 0.9333333333333333rem
}

.v {
  font-weight: 400
}

.w {
  line-height: 1.2
}

.x {
  margin-bottom: 0px
}

.y {
  margin-right: 0px
}

.z {
  margin-top: 0px
}

.ab {
  margin-left: 0px
}

.ac {
  opacity: inherit
}

.ad {
  padding-bottom: 0.53em
}

.ae {
  padding-left: 1em
}

.af {
  padding-right: 1em
}

.ag {
  padding-top: 0.6em
}

.ah {
  pointer-events: auto
}

.ai {
  position: relative
}

.aj {
  border-radius: 2px
}

.ak {
  text-align: center
}

.al {
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease
}

.am {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.an {
  float: none
}

.ao {
  max-width: initial
}
"
`;

exports[`should render with type/disabled 1`] = `
<button
  className="a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ad ae af ag ah ai aj ak al am an ao"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`should render with type/disabled 2`] = `
"
.a:hover {
  background-color: #2869a2
}

.b:hover {
  border-color: #215685
}

.c:hover {
  color: #fff
}

.d:active {
  background-color: #215685
}

.e:active {
  border-color: #1a4468
}

.f:active {
  color: #fff
}

.g:focus {
  background-color: #2f7bbf
}

.h:focus {
  color: #fff
}

.i:focus {
  border-color: #2869a2
}

.j[title] {
  pointer-events: auto
}

.k {
  background-color: #2f7bbf
}

.l {
  border-bottom: 1px solid
}

.m {
  border-color: #2869a2
}

.n {
  border-left: 0px
}

.o {
  border-right: 0px
}

.p {
  border-top: 0px
}

.q {
  color: #fff
}

.r {
  cursor: default
}

.s {
  display: inline-block
}

.t {
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif
}

.u {
  font-size: 0.9333333333333333rem
}

.v {
  font-weight: 400
}

.w {
  line-height: 1.2
}

.x {
  margin-bottom: 0px
}

.y {
  margin-right: 0px
}

.z {
  margin-top: 0px
}

.ab {
  margin-left: 0px
}

.ac {
  opacity: 0.5
}

.ad {
  padding-bottom: 0.53em
}

.ae {
  padding-left: 1em
}

.af {
  padding-right: 1em
}

.ag {
  padding-top: 0.6em
}

.ah {
  pointer-events: none
}

.ai {
  position: relative
}

.aj {
  border-radius: 2px
}

.ak {
  text-align: center
}

.al {
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease
}

.am {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.an {
  float: none
}

.ao {
  max-width: initial
}
"
`;
